syntax = "proto3";

package entities;

option go_package = "github.com/icaroribeiro/hash-code-challenge/back-end/go/internal/grpc/entities";

message Promotion {
    string id = 1;

    string code = 2;

    string title = 3;

    string description = 4;

    float max_discount_pct = 5;

    repeated string products = 6;
}